data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_735.wast
;; 6. **Test for Conditional Branch to Re-evaluated Loop Start**    - **Description**: Construct a loop with a `br_if` instruction evaluating a condition based on re-evaluated local variables mid-execution, ensuring it branches back to the start as expected.    - **Constraint Checked**: Checks re-evaluation logic of conditions in the loop.    - **Incorrect Condition Evaluation**: Validates whether the loop re-entry condition is evaluated and followed correctly.

(assert_invalid
  (module (func $conditional-branch-reval
    (local i32)
    (local.set 0 (i32.const 1))
    (loop (result i32)
      (local.get 0)
      (i32.const 1)
      (i32.add)
      (local.tee 0)
      (i32.const 5)
      (i32.lt_s)
      (br_if 0)
    )
    (drop)
  ))
  "type mismatch"
)